--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,65 +1,8 @@
 @import "tailwindcss";
 
-@theme inline {
-  --font-inter: var(--font-inter);
-  --font-archivo: var(--font-archivo);
-}
-
-@theme {
-  --color-brand-025: rgb(252 250 255);
-  --color-brand-050: rgb(249 245 255);
-  --color-brand-100: rgb(244 235 255);
-  --color-brand-200: rgb(233 215 254);
-  --color-brand-300: rgb(214 187 251);
-  --color-brand-400: rgb(182 146 246);
-  --color-brand-500: rgb(158 119 237);
-  --color-brand-600: rgb(127 86 217);
-  --color-brand-700: rgb(105 65 198);
-  --color-brand-800: rgb(83 56 158);
-  --color-brand-900: rgb(66 48 125);
-  --color-brand-950: rgb(44 28 95);
-
-  --color-error-025: rgb(255 251 250);
-  --color-error-050: rgb(254 243 242);
-  --color-error-100: rgb(254 228 226);
-  --color-error-200: rgb(254 205 202);
-  --color-error-300: rgb(253 162 155);
-  --color-error-400: rgb(249 112 102);
-  --color-error-500: rgb(240 68 56);
-  --color-error-600: rgb(217 45 32);
-  --color-error-700: rgb(180 35 24);
-  --color-error-800: rgb(145 32 24);
-  --color-error-900: rgb(122 39 26);
-  --color-error-950: rgb(85 22 12);
-
-  --color-warning-025: rgb(255 252 245);
-  --color-warning-050: rgb(255 250 235);
-  --color-warning-100: rgb(254 240 199);
-  --color-warning-200: rgb(254 223 137);
-  --color-warning-300: rgb(254 200 75);
-  --color-warning-400: rgb(253 176 34);
-  --color-warning-500: rgb(247 144 9);
-  --color-warning-600: rgb(220 104 3);
-  --color-warning-700: rgb(181 71 8);
-  --color-warning-800: rgb(147 55 13);
-  --color-warning-900: rgb(122 46 14);
-  --color-warning-950: rgb(78 29 9);
-
-  --color-success-025: rgb(246 254 249);
-  --color-success-050: rgb(236 253 243);
-  --color-success-100: rgb(220 250 230);
-  --color-success-200: rgb(171 239 198);
-  --color-success-300: rgb(117 224 167);
-  --color-success-400: rgb(71 205 137);
-  --color-success-500: rgb(23 178 106);
-  --color-success-600: rgb(7 148 85);
-  --color-success-700: rgb(6 118 71);
-  --color-success-800: rgb(8 93 58);
-  --color-success-900: rgb(7 77 49);
-  --color-success-950: rgb(5 51 33);
-
-  --color-gray-025: rgb(253 253 253);
-  --color-gray-050: rgb(250 250 250);
+:root {
+  --color-gray-25: rgb(253 253 253);
+  --color-gray-50: rgb(250 250 250);
   --color-gray-100: rgb(245 245 245);
   --color-gray-200: rgb(233 234 235);
   --color-gray-300: rgb(213 215 218);
@@ -72,7 +15,108 @@
   --color-gray-950: rgb(10 13 18);
 }
 
+[data-theme="dark"] {
+  --color-gray-025: rgb(250 250 250);
+  --color-gray-050: rgb(247 247 247);
+  --color-gray-100: rgb(240 240 241);
+  --color-gray-200: rgb(236 236 237);
+  --color-gray-300: rgb(206 207 210);
+  --color-gray-400: rgb(148 151 156);
+  --color-gray-500: rgb(133 136 142);
+  --color-gray-600: rgb(97 101 108);
+  --color-gray-700: rgb(55 58 65);
+  --color-gray-800: rgb(34 38 47);
+  --color-gray-900: rgb(19 22 27);
+  --color-gray-950: rgb(12 14 18);
+}
+
+@theme inline {
+  --font-inter: var(--font-inter);
+  --font-archivo: var(--font-archivo);
+
+  --color-gray-*: initial;
+  --color-gray-025: var(--color-gray-025);
+  --color-gray-050: var(--color-gray-050);
+  --color-gray-100: var(--color-gray-100);
+  --color-gray-200: var(--color-gray-200);
+  --color-gray-300: var(--color-gray-300);
+  --color-gray-400: var(--color-gray-400);
+  --color-gray-500: var(--color-gray-500);
+  --color-gray-600: var(--color-gray-600);
+  --color-gray-700: var(--color-gray-700);
+  --color-gray-800: var(--color-gray-800);
+  --color-gray-900: var(--color-gray-900);
+  --color-gray-950: var(--color-gray-950);
+  --color-brand-025: rgb(252 250 255);
+  --color-brand-050: rgb(249 245 255);
+  --color-brand-100: rgb(244 235 255);
+  --color-brand-200: rgb(233 215 254);
+  --color-brand-300: rgb(214 187 251);
+  --color-brand-400: rgb(182 146 246);
+  --color-brand-500: rgb(158 119 237);
+  --color-brand-600: rgb(127 86 217);
+  --color-brand-700: rgb(105 65 198);
+  --color-brand-800: rgb(83 56 158);
+  --color-brand-900: rgb(66 48 125);
+  --color-brand-950: rgb(44 28 95);
+  --color-error-025: rgb(255 251 250);
+  --color-error-050: rgb(254 243 242);
+  --color-error-100: rgb(254 228 226);
+  --color-error-200: rgb(254 205 202);
+  --color-error-300: rgb(253 162 155);
+  --color-error-400: rgb(249 112 102);
+  --color-error-500: rgb(240 68 56);
+  --color-error-600: rgb(217 45 32);
+  --color-error-700: rgb(180 35 24);
+  --color-error-800: rgb(145 32 24);
+  --color-error-900: rgb(122 39 26);
+  --color-error-950: rgb(85 22 12);
+}
+
+@theme {
+  --text-*: initial;
+  --text-xs: calc(var(--spacing) * 3);
+  --text-xs--line-height: calc(var(--spacing) * 4.5);
+  --text-sm: calc(var(--spacing) * 3.5);
+  --text-sm--line-height: calc(var(--spacing) * 5);
+  --text-md: calc(var(--spacing) * 4);
+  --text-md--line-height: calc(var(--spacing) * 6);
+  --text-lg: calc(var(--spacing) * 4.5);
+  --text-lg--line-height: calc(var(--spacing) * 7);
+  --text-xl: calc(var(--spacing) * 5);
+  --text-xl--line-height: calc(var(--spacing) * 7.5);
+  --text-display-xs: calc(var(--spacing) * 6);
+  --text-display-xs--line-height: calc(var(--spacing) * 8);
+  --text-display-sm: calc(var(--spacing) * 7.5);
+  --text-display-sm--line-height: calc(var(--spacing) * 9.5);
+  --text-display-md: calc(var(--spacing) * 9);
+  --text-display-md--line-height: calc(var(--spacing) * 11);
+  --text-display-md--letter-spacing: -0.72px;
+  --text-display-lg: calc(var(--spacing) * 12);
+  --text-display-lg--line-height: calc(var(--spacing) * 15);
+  --text-display-lg--letter-spacing: -0.96px;
+  --text-display-xl: calc(var(--spacing) * 15);
+  --text-display-xl--line-height: calc(var(--spacing) * 18);
+  --text-display-xl--letter-spacing: -1.2px;
+  --text-display-2xl: calc(var(--spacing) * 18);
+  --text-display-2xl--line-height: calc(var(--spacing) * 22.5);
+  --text-display-2xl--letter-spacing: -1.44px;
+
+  --radius-*: initial;
+  --radius-none: 0px;
+  --radius-xs: 0.125rem;
+  --radius-sm: 0.25rem;
+  --radius-DEFAULT: 0.25rem;
+  --radius-md: 0.375rem;
+  --radius-lg: 0.5rem;
+  --radius-xl: 0.75rem;
+  --radius-2xl: 1rem;
+  --radius-3xl: 1.5rem;
+  --radius-full: 9999px;
+}
+
 @custom-variant dark (&:where(.dark, .dark *));
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 @custom-variant aria-atomic (&[aria-atomic="true"]);
 @custom-variant aria-busy (&[aria-busy="true"]);
 @custom-variant aria-checked (&[aria-checked="true"]);
