wip design change

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,118 +1,92 @@
 @import "tailwindcss";
 
 :root {
-  --color-gray-025: rgb(253 253 253);
-  --color-gray-050: rgb(250 250 250);
-  --color-gray-100: rgb(245 245 245);
-  --color-gray-200: rgb(233 234 235);
-  --color-gray-300: rgb(213 215 218);
-  --color-gray-400: rgb(164 167 174);
-  --color-gray-500: rgb(113 118 128);
-  --color-gray-600: rgb(83 88 98);
-  --color-gray-700: rgb(65 70 81);
-  --color-gray-800: rgb(37 43 55);
-  --color-gray-900: rgb(24 29 39);
-  --color-gray-950: rgb(10 13 18);
+  --color-neutral-25: #ffffff;
+  --color-neutral-50: #fafafa;
+  --color-neutral-100: #f4f4f5;
+  --color-neutral-200: #e4e4e7;
+  --color-neutral-300: #d4d4d8;
+  --color-neutral-400: #a1a1aa;
+  --color-neutral-500: #71717a;
+  --color-neutral-600: #52525b;
+  --color-neutral-700: #3f3f46;
+  --color-neutral-800: #27272a;
+  --color-neutral-900: #212124;
+  --color-neutral-950: #18181b;
+  --color-blue-25: #ffffff;
+  --color-blue-50: #eff6ff;
+  --color-blue-100: #dbeafe;
+  --color-blue-200: #bfdbfe;
+  --color-blue-300: #93c5fd;
+  --color-blue-400: #60a5fa;
+  --color-blue-500: #3b82f6;
+  --color-blue-600: #2563eb;
+  --color-blue-700: #1d4ed8;
+  --color-blue-800: #1e40af;
+  --color-blue-900: #1e3a8a;
+  --color-blue-950: #172554;
+  --color-red-25: #ffffff;
+  --color-red-50: #fff1f2;
+  --color-red-100: #ffe4e6;
+  --color-red-200: #fecdd3;
+  --color-red-300: #fda4af;
+  --color-red-400: #fb7185;
+  --color-red-500: #f43f5e;
+  --color-red-600: #e11d48;
+  --color-red-700: #be123c;
+  --color-red-800: #9f1239;
+  --color-red-900: #881337;
+  --color-red-950: #4c0519;
 }
 
 [data-theme="dark"] {
-  --color-gray-025: rgb(250 250 250);
-  --color-gray-050: rgb(247 247 247);
-  --color-gray-100: rgb(240 240 241);
-  --color-gray-200: rgb(236 236 237);
-  --color-gray-300: rgb(206 207 210);
-  --color-gray-400: rgb(148 151 156);
-  --color-gray-500: rgb(133 136 142);
-  --color-gray-600: rgb(97 101 108);
-  --color-gray-700: rgb(55 58 65);
-  --color-gray-800: rgb(34 38 47);
-  --color-gray-900: rgb(19 22 27);
-  --color-gray-950: rgb(12 14 18);
 }
 
 @theme inline {
   --font-inter: var(--font-inter);
   --font-archivo: var(--font-archivo);
 
-  --color-gray-*: initial;
-  --color-gray-025: var(--color-gray-025);
-  --color-gray-050: var(--color-gray-050);
-  --color-gray-100: var(--color-gray-100);
-  --color-gray-200: var(--color-gray-200);
-  --color-gray-300: var(--color-gray-300);
-  --color-gray-400: var(--color-gray-400);
-  --color-gray-500: var(--color-gray-500);
-  --color-gray-600: var(--color-gray-600);
-  --color-gray-700: var(--color-gray-700);
-  --color-gray-800: var(--color-gray-800);
-  --color-gray-900: var(--color-gray-900);
-  --color-gray-950: var(--color-gray-950);
-  --color-brand-025: rgb(252 250 255);
-  --color-brand-050: rgb(249 245 255);
-  --color-brand-100: rgb(244 235 255);
-  --color-brand-200: rgb(233 215 254);
-  --color-brand-300: rgb(214 187 251);
-  --color-brand-400: rgb(182 146 246);
-  --color-brand-500: rgb(158 119 237);
-  --color-brand-600: rgb(127 86 217);
-  --color-brand-700: rgb(105 65 198);
-  --color-brand-800: rgb(83 56 158);
-  --color-brand-900: rgb(66 48 125);
-  --color-brand-950: rgb(44 28 95);
-  --color-error-025: rgb(255 251 250);
-  --color-error-050: rgb(254 243 242);
-  --color-error-100: rgb(254 228 226);
-  --color-error-200: rgb(254 205 202);
-  --color-error-300: rgb(253 162 155);
-  --color-error-400: rgb(249 112 102);
-  --color-error-500: rgb(240 68 56);
-  --color-error-600: rgb(217 45 32);
-  --color-error-700: rgb(180 35 24);
-  --color-error-800: rgb(145 32 24);
-  --color-error-900: rgb(122 39 26);
-  --color-error-950: rgb(85 22 12);
+  --color-neutral-*: initial;
+  --color-blue-*: initial;
+  --color-neutral-25: var(--color-neutral-25);
+  --color-neutral-50: var(--color-neutral-50);
+  --color-neutral-100: var(--color-neutral-100);
+  --color-neutral-200: var(--color-neutral-200);
+  --color-neutral-300: var(--color-neutral-300);
+  --color-neutral-400: var(--color-neutral-400);
+  --color-neutral-500: var(--color-neutral-500);
+  --color-neutral-600: var(--color-neutral-600);
+  --color-neutral-700: var(--color-neutral-700);
+  --color-neutral-800: var(--color-neutral-800);
+  --color-neutral-900: var(--color-neutral-900);
+  --color-neutral-950: var(--color-neutral-950);
+  --color-blue-25: var(--color-blue-25);
+  --color-blue-50: var(--color-blue-50);
+  --color-blue-100: var(--color-blue-100);
+  --color-blue-200: var(--color-blue-200);
+  --color-blue-300: var(--color-blue-300);
+  --color-blue-400: var(--color-blue-400);
+  --color-blue-500: var(--color-blue-500);
+  --color-blue-600: var(--color-blue-600);
+  --color-blue-700: var(--color-blue-700);
+  --color-blue-800: var(--color-blue-800);
+  --color-blue-900: var(--color-blue-900);
+  --color-blue-950: var(--color-blue-950);
+  --color-red-25: var(--color-red-25);
+  --color-red-50: var(--color-red-50);
+  --color-red-100: var(--color-red-100);
+  --color-red-200: var(--color-red-200);
+  --color-red-300: var(--color-red-300);
+  --color-red-400: var(--color-red-400);
+  --color-red-500: var(--color-red-500);
+  --color-red-600: var(--color-red-600);
+  --color-red-700: var(--color-red-700);
+  --color-red-800: var(--color-red-800);
+  --color-red-900: var(--color-red-900);
+  --color-red-950: var(--color-red-950);
 }
 
 @theme {
-  --text-*: initial;
-  --text-xs: calc(var(--spacing) * 3);
-  --text-xs--line-height: calc(var(--spacing) * 4.5);
-  --text-sm: calc(var(--spacing) * 3.5);
-  --text-sm--line-height: calc(var(--spacing) * 5);
-  --text-md: calc(var(--spacing) * 4);
-  --text-md--line-height: calc(var(--spacing) * 6);
-  --text-lg: calc(var(--spacing) * 4.5);
-  --text-lg--line-height: calc(var(--spacing) * 7);
-  --text-xl: calc(var(--spacing) * 5);
-  --text-xl--line-height: calc(var(--spacing) * 7.5);
-  --text-display-xs: calc(var(--spacing) * 6);
-  --text-display-xs--line-height: calc(var(--spacing) * 8);
-  --text-display-sm: calc(var(--spacing) * 7.5);
-  --text-display-sm--line-height: calc(var(--spacing) * 9.5);
-  --text-display-md: calc(var(--spacing) * 9);
-  --text-display-md--line-height: calc(var(--spacing) * 11);
-  --text-display-md--letter-spacing: -0.72px;
-  --text-display-lg: calc(var(--spacing) * 12);
-  --text-display-lg--line-height: calc(var(--spacing) * 15);
-  --text-display-lg--letter-spacing: -0.96px;
-  --text-display-xl: calc(var(--spacing) * 15);
-  --text-display-xl--line-height: calc(var(--spacing) * 18);
-  --text-display-xl--letter-spacing: -1.2px;
-  --text-display-2xl: calc(var(--spacing) * 18);
-  --text-display-2xl--line-height: calc(var(--spacing) * 22.5);
-  --text-display-2xl--letter-spacing: -1.44px;
-
-  --radius-*: initial;
-  --radius-none: 0px;
-  --radius-xs: 0.125rem;
-  --radius-sm: 0.25rem;
-  --radius-DEFAULT: 0.25rem;
-  --radius-md: 0.375rem;
-  --radius-lg: 0.5rem;
-  --radius-xl: 0.75rem;
-  --radius-2xl: 1rem;
-  --radius-3xl: 1.5rem;
-  --radius-full: 9999px;
 }
 
 @custom-variant dark (&:where(.dark, .dark *));
