feat: :sparkles: add QRCode component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,5 @@
 @import "tailwindcss";
-
-@theme inline {
-  --font-sans: var(--font-sans);
-}
+@plugin "tailwind-scrollbar";
 
 @custom-variant dark (&:where(.dark, .dark *));
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
@@ -56,3 +53,42 @@
 @custom-variant aria-relevant-all (&[aria-relevant="all"]);
 @custom-variant aria-relevant-removals (&[aria-relevant="removals"]);
 @custom-variant aria-relevant-text (&[aria-relevant="text"]);
+
+.iphone {
+  overflow: hidden;
+  --phone-scale: 0.8;
+  scale: var(--phone-scale);
+  transform-origin: center;
+  aspect-ratio: 462/978;
+  border: 8px solid var(--color-neutral-700);
+  background: color-mix(
+    in oklab,
+    var(--color-neutral-950) 100%,
+    transparent 0%
+  );
+  border-radius: 65px;
+  width: 100%;
+  max-width: 380px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.iphone-camera {
+  z-index: 1;
+  background: var(--color-neutral-950);
+  border-radius: 17px;
+  width: 28%;
+  height: 28px;
+  position: absolute;
+  top: 3%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.iphone-display {
+  border-radius: 54px;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
